Change to mysql parameters

--- a/cookbooks/db_mysql/templates/default/my.cnf.erb
+++ b/cookbooks/db_mysql/templates/default/my.cnf.erb
@@ -32,6 +32,7 @@ log-error       = /var/log/mysqld.log
 [mysqld]
 #
 #Change done by Personal Capital
+open-files-limit                = 30000
 log_warnings                    = 0
 expire_logs_days                = 15
 lower_case_table_names          = 1
